--- a/app/src/main/res/layout/activity_p_set_present.xml
+++ b/app/src/main/res/layout/activity_p_set_present.xml
@@ -36,12 +36,12 @@
             android:layout_alignParentStart="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
-            android:layout_marginStart="133dp"
-            android:layout_marginLeft="133dp"
-            android:layout_marginBottom="16dp"
             android:text="어떤 선물인가요?"
             android:textColor="#4A4A4A"
-            android:textSize="20sp"/>
+            android:textSize="20sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:layout_editor_absoluteY="113dp" />
 
         <ImageView
             android:id="@+id/imageViewPresentBackground"
@@ -57,10 +57,10 @@
             android:layout_weight="3"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.96"
+            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.457"
+            app:layout_constraintVertical_bias="0.319"
             app:srcCompat="@drawable/cloud" />
 
         <ImageView
@@ -70,22 +70,12 @@
             android:layout_alignParentStart="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
-            android:layout_marginStart="64dp"
-            android:layout_marginLeft="64dp"
-            android:layout_marginTop="156dp"
+            android:layout_marginStart="136dp"
+            android:layout_marginLeft="136dp"
             android:background="@android:color/transparent"
             android:src="@drawable/album_icon"
-
-           
-            app:layout_constraintHorizontal_bias="0.404"
             app:layout_constraintStart_toStartOf="parent"
-             />
-=======
-            app:layout_constraintEnd_toEndOf="@+id/imageViewPresentBackground"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/imageViewPresentBackground" />
->>>>>>> 166fee2fe7eac70a68ca2d0aacfae2e3a68dcb2a
+            tools:layout_editor_absoluteY="332dp" />
 
         <EditText
             android:id="@+id/edit_presentName"
@@ -96,6 +86,7 @@
             android:layout_alignParentTop="true"
             android:layout_marginStart="149dp"
             android:layout_marginLeft="149dp"
+            android:layout_marginBottom="8dp"
             android:hint="선물이름 입력"
             android:textColor="#4A4A4A"
             android:textColorHint="#4A4A4A"
