Balloon Animation Added

--- a/app/src/main/res/anim/cloudanim1.xml
+++ b/app/src/main/res/anim/cloudanim1.xml
@@ -5,7 +5,8 @@
         android:toXDelta="100%p"
         android:duration="18000"
         android:repeatCount="-1"
-        android:fillAfter="true" />
+        android:fillAfter="true"
+        />
 
 </set>
 
