--- a/app/src/main/res/anim/shake.xml
+++ b/app/src/main/res/anim/shake.xml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <set xmlns:android="http://schemas.android.com/apk/res/android">
-    <translate xmlns:android="http://schemas.android.com/apk/res/android"
-        android:fromXDelta="0"
-        android:toXDelta="10"
-        android:duration="50000"
-        android:interpolator="@anim/cycle_5" />
+    <rotate
+        android:duration="8000"
+        android:fromDegrees="-10" android:toDegrees="10"
+        android:pivotX="50%"
+        android:pivotY="50%"
+        android:repeatMode="reverse"
+        android:fillAfter="false"
+        android:repeatCount="-1"
+        />
 
 </set>
