p_home 하단 포인트 애니메이션 추가

--- a/app/src/main/res/layout/activity_p_home.xml
+++ b/app/src/main/res/layout/activity_p_home.xml
@@ -11,6 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="bottom"
+        android:id="@+id/sliding_panel"
         app:umanoDragView="@+id/drawer"
         app:umanoOverlay="false"
         app:umanoPanelHeight="60dp"
