c_home 슬라이딩패널 애니메이션 & 리스트뷰 수정

--- a/app/src/main/res/layout/activity_c_history.xml
+++ b/app/src/main/res/layout/activity_c_history.xml
@@ -55,7 +55,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.126"
-                app:srcCompat="@drawable/cloud3" />
+                app:srcCompat="@drawable/move_cloud" />
 
             <ImageView
                 android:id="@+id/cloud2"
@@ -72,7 +72,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.353"
-                app:srcCompat="@drawable/cloud3" />
+                app:srcCompat="@drawable/move_cloud" />
 
             <ImageView
                 android:id="@+id/cloud3"
@@ -88,7 +88,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.601"
-                app:srcCompat="@drawable/cloud3" />
+                app:srcCompat="@drawable/move_cloud" />
 
             <ImageView
                 android:id="@+id/cloud4"
@@ -105,7 +105,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.803"
-                app:srcCompat="@drawable/cloud3" />
+                app:srcCompat="@drawable/move_cloud" />
 
             <TextView
                 android:id="@+id/textView9"
