fix history(don't view cur balloon) & add image and txt at open_present

--- a/app/src/main/res/layout/activity_open_present.xml
+++ b/app/src/main/res/layout/activity_open_present.xml
@@ -21,13 +21,32 @@
         app:srcCompat="@drawable/cloud"
         tools:layout_editor_absoluteX="25dp" />
 
+    <ImageView
+        android:id="@+id/imageViewPresent"
+        android:layout_width="600dp"
+        android:layout_height="400dp"
+        app:layout_constraintBottom_toBottomOf="@id/imageViewBalloonBackground"
+        app:layout_constraintEnd_toEndOf="@+id/imageViewBalloonBackground"
+        app:layout_constraintStart_toStartOf="@id/imageViewBalloonBackground"
+        app:layout_constraintTop_toTopOf="@+id/imageViewBalloonBackground" />
+
+    <TextView
+        android:id="@+id/txtViewPresent"
+        android:layout_width="50dp"
+        android:layout_height="30dp"
+        android:layout_marginTop="20dp"
+        android:textColor="@color/black"
+        app:layout_constraintEnd_toEndOf="@id/imageViewPresent"
+        app:layout_constraintStart_toStartOf="@id/imageViewPresent"
+        app:layout_constraintTop_toBottomOf="@id/imageViewPresent" />
+
     <Button
         android:id="@+id/btn_confirmPresent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="136dp"
+        android:layout_marginTop="30dp"
         android:text="선물 수령"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/txtViewPresent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
