--- a/app/src/main/res/layout/activity_c_history.xml
+++ b/app/src/main/res/layout/activity_c_history.xml
@@ -114,9 +114,9 @@
                 android:gravity="center_horizontal"
                 android:text="History"
                 android:textAlignment="center"
-                android:textColor="@color/black"
+                android:textColor="#8C8A8A"
+                android:fontFamily="@font/gmarketmedium"
                 android:textSize="45dp"
-                android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
