--- a/app/src/main/res/layout/activity_c_unmatched.xml
+++ b/app/src/main/res/layout/activity_c_unmatched.xml
@@ -70,8 +70,8 @@
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_marginBottom="299dp"
-            android:fontFamily="@font/duru_sans"
             android:gravity='center'
+            android:fontFamily="@font/gmarketlight"
             android:text="부모님을 기다리고 있어요"
             android:textColor="#5C5C5C"
             android:textSize="25dp"
