--- a/app/src/main/res/layout/activity_open_present.xml
+++ b/app/src/main/res/layout/activity_open_present.xml
@@ -21,13 +21,19 @@
         app:srcCompat="@drawable/cloud"
         tools:layout_editor_absoluteX="25dp" />
 
+
     <Button
         android:id="@+id/btn_confirmPresent"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="136dp"
-        android:text="선물 수령"
+        android:layout_width="80dp"
+        android:layout_height="40dp"
+        android:background="@drawable/signbtn_bg"
+        android:fontFamily="@font/duru_sans"
+        android:text="선물수령"
+        android:textSize="15sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.813" />
 </androidx.constraintlayout.widget.ConstraintLayout>
