--- a/app/src/main/res/layout/activity_c_history.xml
+++ b/app/src/main/res/layout/activity_c_history.xml
@@ -210,8 +210,8 @@
                 android:gravity="center_horizontal"
                 android:textAlignment="center"
                 android:textColor="@color/black"
+                android:fontFamily="@font/gmarketmedium"
                 android:textSize="20dp"
-                android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="@+id/imgView_history1"
                 app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintStart_toStartOf="@+id/imgView_history1"
@@ -225,8 +225,8 @@
                 android:gravity="center_horizontal"
                 android:textAlignment="center"
                 android:textColor="@color/black"
+                android:fontFamily="@font/gmarketmedium"
                 android:textSize="20dp"
-                android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="@+id/imgView_history2"
                 app:layout_constraintHorizontal_bias="0.444"
                 app:layout_constraintStart_toStartOf="@+id/imgView_history2"
@@ -240,8 +240,8 @@
                 android:gravity="center_horizontal"
                 android:textAlignment="center"
                 android:textColor="@color/black"
+                android:fontFamily="@font/gmarketmedium"
                 android:textSize="20dp"
-                android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="@+id/imgView_history3"
                 app:layout_constraintHorizontal_bias="0.7"
                 app:layout_constraintStart_toStartOf="@+id/imgView_history3"
@@ -256,7 +256,7 @@
                 android:textAlignment="center"
                 android:textColor="@color/black"
                 android:textSize="20dp"
-                android:textStyle="bold"
+                android:fontFamily="@font/gmarketmedium"
                 app:layout_constraintEnd_toEndOf="@+id/imgView_history4"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="@+id/imgView_history4"
@@ -271,7 +271,7 @@
                 android:textAlignment="center"
                 android:textColor="@color/black"
                 android:textSize="20dp"
-                android:textStyle="bold"
+                android:fontFamily="@font/gmarketmedium"
                 app:layout_constraintEnd_toEndOf="@+id/imgView_history5"
                 app:layout_constraintStart_toStartOf="@+id/imgView_history5"
                 app:layout_constraintTop_toBottomOf="@id/imgView_history5" />
@@ -285,7 +285,7 @@
                 android:textAlignment="center"
                 android:textColor="@color/black"
                 android:textSize="20dp"
-                android:textStyle="bold"
+                android:fontFamily="@font/gmarketmedium"
                 app:layout_constraintEnd_toEndOf="@+id/imgView_history6"
                 app:layout_constraintStart_toStartOf="@+id/imgView_history6"
                 app:layout_constraintTop_toBottomOf="@id/imgView_history6" />
@@ -300,7 +300,7 @@
                 app:layout_constraintTop_toBottomOf="@id/imgView_history7"
                 android:textColor="@color/black"
                 android:textSize="20dp"
-                android:textStyle="bold"
+                android:fontFamily="@font/gmarketmedium"
                 android:textAlignment="center"
                 android:gravity="center_horizontal"/>
 
@@ -314,7 +314,7 @@
                 app:layout_constraintTop_toBottomOf="@id/imgView_history8"
                 android:textColor="@color/black"
                 android:textSize="20dp"
-                android:textStyle="bold"
+                android:fontFamily="@font/gmarketmedium"
                 android:textAlignment="center"
                 android:gravity="center_horizontal"/>
 
