--- a/app/src/main/res/layout/activity_c_unmatched.xml
+++ b/app/src/main/res/layout/activity_c_unmatched.xml
@@ -34,9 +34,8 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
             android:layout_marginVertical="10dp"
-            android:layout_marginStart="-6dp"
-            android:layout_marginLeft="-6dp"
-            android:layout_marginTop="177dp"
+            android:layout_marginStart="-4dp"
+            android:layout_marginLeft="-4dp"
             android:layout_weight="3"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -62,7 +61,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.175"
-            app:srcCompat="@drawable/waitingchild" />
+            app:srcCompat="@drawable/childwaiting" />
 
         <TextView
             android:id="@+id/textView"
